modif de fullpages

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 	<meta charset="UTF-8">
 
 <link rel="stylesheet" href="css/portfolio.css">
-<link rel="stylesheet" type="text/css" href="bower_components/fullpage.js/jquery.fullPage.css" />
+<link rel="stylesheet" type="text/css" href="fullPage.js-master/jquery.fullPage.css" />
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <!-- This following line is optional. Only necessary if you use the option css3:false and you want to use other easing effects rather than "linear", "swing" or "easeInOutCubic". -->
-<!-- <script src="bower_components/fullpage.js/vendors/jquery.easings.min.js"></script> -->
+<!-- <script src="fullPage.js-master/dist/fullpage.js/vendors/jquery.easings.min.js"></script> -->
 
 
 <!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
-<!-- <script type="text/javascript" src="bower_components/fullpage.js/vendors/scrolloverflow.min.js"></script> -->
+<!-- <script type="text/javascript" src="fullPage.js-master/dist/fullpage.js/vendors/scrolloverflow.min.js"></script> -->
 
-<script type="text/javascript" src="bower_components/fullpage.js/jquery.fullPage.js"></script>
+<script type="text/javascript" src="fullPage.js-master/dist/jquery.fullPage.js"></script>
 
 <script type="" src="js/portfolio.js" ></script>
 
