--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		    <div class="section prez">
 		    	<h1> Mon portfolio</h1>
 		    	<div><img class="img" src="images/trombi29.jpg" alt=""></div>
-		    	<div><p>Description Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero distinctio aspernatur dolorem odit velit dignissimos in vel ea voluptatibus rerum, nulla, accusantium odio delectus eum error doloremque ab, ipsa nisi.</p></div>
+		    	<div><p>babar est un connard.</p></div>
 		    </div>
 		    <div class="section">
 
