modif pour fullPage

--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<meta charset="UTF-8">
 
+				<!-- css pure -->
 <link rel="stylesheet" href="css/portfolio.css">
-<link rel="stylesheet" type="text/css" href="fullPage.js-master/jquery.fullPage.css" />
+
+				<!-- css fullpage -->
+<link rel="stylesheet" type="text/css" href="fullPage.js/jquery.fullPage.css" />
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <!-- This following line is optional. Only necessary if you use the option css3:false and you want to use other easing effects rather than "linear", "swing" or "easeInOutCubic". -->
-<!-- <script src="fullPage.js-master/dist/fullpage.js/vendors/jquery.easings.min.js"></script> -->
+<!-- <script src="fullPage.js/dist/fullpage.js/vendors/jquery.easings.min.js"></script> -->
 
 
 <!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
-<!-- <script type="text/javascript" src="fullPage.js-master/dist/fullpage.js/vendors/scrolloverflow.min.js"></script> -->
+<!-- <script type="text/javascript" src="fullPage.js/dist/fullpage.js/vendors/scrolloverflow.min.js"></script> -->
 
-<script type="text/javascript" src="fullPage.js-master/dist/jquery.fullPage.js"></script>
+<script type="text/javascript" src="fullPage.js/jquery.fullPage.js"></script>
 
 <script type="" src="js/portfolio.js" ></script>
 
@@ -29,7 +32,7 @@
 		    <div class="section prez">
 		    	<h1> Mon portfolio</h1>
 		    	<div><img class="img" src="images/trombi29.jpg" alt=""></div>
-		    	<div><p>babar est un connard.</p></div>
+		    	<div><p>babar est un gros connard.</p></div>
 		    </div>
 		    <div class="section">
 
