--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 				<!-- css fullpage -->
 <link rel="stylesheet" type="text/css" href="fullPage.js/jquery.fullPage.css" />
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
 
 <!-- This following line is optional. Only necessary if you use the option css3:false and you want to use other easing effects rather than "linear", "swing" or "easeInOutCubic". -->
 <!-- <script src="fullPage.js/dist/fullpage.js/vendors/jquery.easings.min.js"></script> -->
