--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		    <div class="section prez">
 		    	<h1> Mon portfolio</h1>
 		    	<div><img class="img" src="images/trombi29.jpg" alt=""></div>
-		    	<div><p>babar est un gros connard.</p></div>
+		    	<div><p>Description</p></div>
 		    </div>
 		    <div class="section">
 
@@ -75,6 +75,16 @@
 		    		</div>
 
 		    	</div>
+		    </div>
+		    <div class="section">
+		    	<div class="slide">
+		    		<div class="container-link">
+		    			waaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+		    		</div>
+
+		    	</div>
+		    	<div class="slide"></div>
+		    	<div class="slide"></div>
 		    </div>
 		</div>
 	</div>
