ajout de description + correction

--- a/index.html
+++ b/index.html
@@ -31,14 +31,23 @@
 	<div class="container">
 		<div id="fullpage">
 		    <div class="section prez">
-		    	<h1> Mon portfolio</h1>
-		    	<div><img class="img" src="images/trombi29.jpg" alt=""></div>
-		    	<div><p>Description</p></div>
+		    	<div class="containt">
+			    	<h1> Mon portfolio</h1>
+			    	<div>
+			    		<img class="img" src="images/trombi29.jpg" alt="">
+			    	</div>
+			    	<div>
+			    		<p>Description: </p>
+			    		<p>Total néophyte dans la programmation il y a 6 mois, aujourd'hui j'ai pris goût à ce métier et si la frustration de ne pas maîtriser comme je le souhaiterais les différentes technologies est importante, elle est compensée par mon envie d'apprendre et de continuer à découvrir ou à approfondir mon apprentissage sur un language actuel ou nouveau.</p>
+			    	</div>
+		    	</div>
 		    </div>
 		    <div class="section">
 
 		    	<div class="slide">
-
+		    	<div class="detail">
+					<p>Premier projet d'un site statique effectué les premières semaines de formation puis amélioré avec l'ajout de notions responsive.</p>
+					</div>
 					<div class="container-link">
 						<a href="http://yoannlg.github.io/irvingfarm/">
 			    			<div class="irvingfarm cover-slide"></div>
@@ -48,26 +57,22 @@
 		    	</div>
 
 		    	<div class="slide">
-
+		    	<div class="detail">
+					<p>Description : Second projet solo d'un site statique et responsive avec l'utilisation de la commande Flex.</p>
+		    	</div>
 		    		<div class="container-link">
 		    			<a href="http://yoannlg.github.io/airbnb/">
-		    				<div class="cover-slide airbnb"></div>
+		    				<div class="airbnb cover-slide"></div>
 		    			</a>
 		    		</div>
 
 		    	</div>
 
+
 		    	<div class="slide">
-
-		    		<div class="container-link">
-		    			<a href="http://yoannlg.github.io/art-like/">
-		    				<div class="cover-slide art-like"></div>
-		    			</a>
-		    		</div>
-
-		    	</div>
-		    	<div class="slide">
-
+				<div class="detail">
+					<p>Description : Premier projet de groupe sur un site statique avec utilisation de trello et de git. Projet réalisé sur une semaine.</p>
+				</div>
 		    		<div class="container-link">
 		    			<a href="http://yoannlg.github.io/panamburger/">
 		    				<div class="cover-slide panamburger"></div>
@@ -75,8 +80,20 @@
 		    		</div>
 
 		    	</div>
+
+		    	<div class="slide">
+				<div class="detail">
+					<p>Description : Projet de groupe pour la SNCF développement. Projet réalisé sur une semaine.</p>
+				</div>
+		    		<div class="container-link">
+		    			<a href="http://yoannlg.github.io/art-like/">
+		    				<div class="cover-slide art-like"></div>
+		    			</a>
+		    		</div>
+
+		    	</div>
 		    </div>
-		    <div class="section">
+<!-- 		    <div class="section">
 		    	<div class="slide">
 		    		<div class="container-link">
 		    			waaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
@@ -84,7 +101,7 @@
 
 		    	</div>
 		    	<div class="slide"></div>
-		    	<div class="slide"></div>
+		    	<div class="slide"></div> -->
 		    </div>
 		</div>
 	</div>
