--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 		    	<div class="slide">
 		    	<div class="detail">
-					<p>Description : Second projet solo d'un site statique et responsive avec l'utilisation de la commande Flex.</p>
+					<p>Second projet solo d'un site statique et responsive avec l'utilisation de la commande Flex.</p>
 		    	</div>
 		    		<div class="container-link">
 		    			<a href="http://yoannlg.github.io/airbnb/">
@@ -71,7 +71,7 @@
 
 		    	<div class="slide">
 				<div class="detail">
-					<p>Description : Premier projet de groupe sur un site statique avec utilisation de trello et de git. Projet réalisé sur une semaine.</p>
+					<p>Premier projet de groupe sur un site statique avec utilisation de trello et de git. Projet réalisé sur une semaine.</p>
 				</div>
 		    		<div class="container-link">
 		    			<a href="http://yoannlg.github.io/panamburger/">
@@ -83,7 +83,7 @@
 
 		    	<div class="slide">
 				<div class="detail">
-					<p>Description : Projet de groupe pour la SNCF développement. Projet réalisé sur une semaine.</p>
+					<p>Projet de groupe pour la SNCF développement. Projet réalisé sur une semaine.</p>
 				</div>
 		    		<div class="container-link">
 		    			<a href="http://yoannlg.github.io/art-like/">
